--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h1>EMILY FERREIRA</h1>
-    <p>Emily Ferreira é uma garota de <strong>14 anos</strong>, natural da cidade de <strong>Colombo, PR</strong>. Emily tem vários hobbies, e um deles é cantar. Em breve, ela irá lançar 3 músicas autorais: <strong>CHORA MAIS; VEM; E O BAR JÁ VIROU ROTINA</strong>, músicas do gênero sertanejo.</p>
+    <p>    Emily Ferreira é uma garota de <strong>14 anos</strong>, natural da cidade de <strong>Colombo, PR</strong>. Emily tem vários hobbies, e um deles é cantar. Em breve, ela irá lançar 3 músicas autorais: <strong>CHORA MAIS; VEM; E O BAR JÁ VIROU ROTINA</strong>, músicas do gênero sertanejo.</p>
  
-    <p>A garota tem referências musicais fortes como <strong>MARÍLIA MENDONÇA, HENRIQUE e JULIANO, ZÉ NETO E CRISTIANO, MAIARA e MARAISA</strong>, entre outros grandes nomes do gênero.</p>
+    <p>    A garota tem referências musicais fortes como <strong>MARÍLIA MENDONÇA, HENRIQUE e JULIANO, ZÉ NETO E CRISTIANO, MAIARA e MARAISA</strong>, entre outros grandes nomes do gênero. ''Sempre gostei de música, minha família é muito musical. Então desde pequena, sempre gostei de cantar'', relatou a menina em uma recente entrevista a um podcast.</p>
     <p>''Sempre gostei de música, minha família é muito musical. Então desde pequena, sempre gostei de cantar'', relatou a menina em uma recente entrevista em um podcast.
-        <p> img src= "IMG_20240717_162452_634.webp"</p>
+        <p> img src= </p>
     </p>
 </body>
 </html>
