--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  
     <p>    A garota tem referências musicais fortes como <strong>MARÍLIA MENDONÇA, HENRIQUE e JULIANO, ZÉ NETO E CRISTIANO, MAIARA e MARAISA</strong>, entre outros grandes nomes do gênero. ''Sempre gostei de música, minha família é muito musical. Então desde pequena, sempre gostei de cantar'', relatou a menina em uma recente entrevista a um podcast.</p>
     <p>''Sempre gostei de música, minha família é muito musical. Então desde pequena, sempre gostei de cantar'', relatou a menina em uma recente entrevista em um podcast.
-        <p> img src= "IMG_20240717_162452_634.webp" </p>
+        <p> img src= "<IMG_20240717_634 class="webp"></IMG_20240717_634></p>
     </p>
 </body>
 </html>
