--- a/index.html
+++ b/index.html
@@ -7,12 +7,23 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>EMILY FERREIRA</h1>
+    <h1>MARÍLIA MENDONÇA</h1>
     <p>    Emily Ferreira é uma garota de <strong>14 anos</strong>, natural da cidade de <strong>Colombo, PR</strong>. Emily tem vários hobbies, e um deles é cantar. Em breve, ela irá lançar 3 músicas autorais: <strong>CHORA MAIS; VEM; E O BAR JÁ VIROU ROTINA</strong>, músicas do gênero sertanejo.</p>
  
-    <p>    A garota tem referências musicais fortes como <strong>MARÍLIA MENDONÇA, HENRIQUE e JULIANO, ZÉ NETO E CRISTIANO, MAIARA e MARAISA</strong>, entre outros grandes nomes do gênero. ''Sempre gostei de música, minha família é muito musical. Então desde pequena, sempre gostei de cantar'', relatou a menina em uma recente entrevista a um podcast.</p>
+    <p>    A garota tem referências musicais fortes como <strong>MARÍLIA MENDONÇA, HENRIQUE e JULIANO, ZÉ NETO E CRISTIANO, MAIARA e MARAISA</strong>, entre outros grandes nomes do gênero. 
     <p>''Sempre gostei de música, minha família é muito musical. Então desde pequena, sempre gostei de cantar'', relatou a menina em uma recente entrevista em um podcast.
         <p> img src= "<IMG_20240717_634 class="webp"></IMG_20240717_634></p>
-    </p>
+    <img src="IMG_20240717_162452_634.webp"
+    <ul> 
+        <h4>ALBUNS DA CANTORA</h4>
+        <li>MARÍLIA MENDONÇA AO VIVO - 2015</li>
+        <li>DVD REALIDADE - 2017</li>
+        <li>AGORA É QUE SÃO ELAS - 2018</li>
+        <li>TODOS OS CANTOS - 2019/2020</li>
+        <li>PATROAS - 2020</li>
+        <li>NOSSO AMOR ENVELHECEU - 2021</li>
+        <li>PATROAS 35% - 2021</li>
+        
+    </ul>
 </body>
 </html>
