--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <h1>MARÍLIA MENDONÇA</h1>
-    <p>    Marília Mendonça foi uma cantora sertaneja <strong>26 anos</strong>, natural da cidade de <strong>Colombo, PR</strong>. Emily tem vários hobbies, e um deles é cantar. Em breve, ela irá lançar 3 músicas autorais: <strong>CHORA MAIS; VEM; E O BAR JÁ VIROU ROTINA</strong>, músicas do gênero sertanejo.</p>
- 
-    <p>    A garota tem referências musicais fortes como <strong>MARÍLIA MENDONÇA, HENRIQUE e JULIANO, ZÉ NETO E CRISTIANO, MAIARA e MARAISA</strong>, entre outros grandes nomes do gênero. 
-    <p>''Sempre gostei de música, minha família é muito musical. Então desde pequena, sempre gostei de cantar'', relatou a menina em uma recente entrevista em um podcast.
+    <p>    Marília Mendonça foi uma cantora sertaneja de  <strong>26 anos</strong>, natural da cidade de <strong>Cristianópolis, GO</strong>. Líder do subgênero musical <strong>FEMINEJO</strong> -sertanejo por mulheres-, Marília Mendonça, lidera o topo das paradas musicais com nada mais nada menos que  12,5 milhões de ouvintes mensais na plataforma Spotify, ultrapassando nomes renomados como Anitta, Zé Neto e Cristiano entre outros. </p> 
+    <p>    Marília foi vítima de um acidente aéreo fatal em novembro de 2021. A cantora estava a caminho de Minas Gerais, onde realizaria apresentações durante o final de semana. Infelizmente, Marília e todos que estavam à bordo faleceram. Ao todo foram 5 vítimas: o piloto Geraldo Medeiros, o copiloto Tarciso Viana, o produtor Henrique Ribeiro e o tio e assessor da cantora, Abicieli Silveira Dias Filho. </p> 
+   <h2>O INÍCIO DE TUDO</h2>
+    <p>    A cantora iniciou sua carreira aos 12 anos de idade. Começou como compositora, tendo sua sua primeira canção: ''<strong>Minha Herança</strong>'', gravada pela dupla João Neto e Frederico, no ano de 2012. 
+        <p> Além de canção Minha Herança,</p>
         <p> img src= "<IMG_20240717_634 class="webp"></IMG_20240717_634></p>
     <img src="IMG_20240717_162452_634.webp"
     <ul> 
