--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <h1>MARÍLIA MENDONÇA</h1>
-    <p>    Marília Mendonça foi uma cantora sertaneja de  <strong>26 anos</strong>, natural da cidade de <strong>Cristianópolis, GO</strong>. Líder do subgênero musical <strong>FEMINEJO</strong> -sertanejo por mulheres-, Marília Mendonça, lidera o topo das paradas musicais com nada mais nada menos que  12,5 milhões de ouvintes mensais na plataforma Spotify, ultrapassando nomes renomados como Anitta, Zé Neto e Cristiano entre outros. </p> 
+    <p>    Marília Mendonça foi uma cantora sertaneja de  <strong>26 anos</strong>, natural da cidade de <strong>Cristianópolis, GO</strong>. Líder do subgênero musical <strong>FEMINEJO</strong> -sertanejo por mulheres-, Marília Mendonça, lidera o topo das paradas musicais com nada mais nada menos que  12,5 milhões de ouvintes mensais na plataforma Spotify, ultrapassando nomes renomados como Anitta, Zé Neto & Cristiano entre outros. </p> 
     <p>    Marília foi vítima de um acidente aéreo fatal em novembro de 2021. A cantora estava a caminho de Minas Gerais, onde realizaria apresentações durante o final de semana. Infelizmente, Marília e todos que estavam à bordo faleceram. Ao todo foram 5 vítimas: o piloto Geraldo Medeiros, o copiloto Tarciso Viana, o produtor Henrique Ribeiro e o tio e assessor da cantora, Abicieli Silveira Dias Filho. </p> 
    <h2>O INÍCIO DE TUDO</h2>
-    <p>    A cantora iniciou sua carreira aos 12 anos de idade. Começou como compositora, tendo sua sua primeira canção: ''<strong>Minha Herança</strong>'', gravada pela dupla João Neto e Frederico, no ano de 2012. 
-        <p> Além de canção Minha Herança,</p>
+    <p>    A cantora iniciou sua carreira aos 12 anos de idade. Começou como compositora, tendo sua primeira canção: ''<strong>Minha Herança</strong>'', gravada pela dupla João Neto & Frederico, no ano de 2012. 
+        <p> Além da dupla João Neto & Frederico, Marília teve suas composições gravadas por nomes como Jorge & Mateus, Matheus & Kauan, Maiara & Maraisa, Henrique & Juliano, entre outros grandes nomes da música sertaneja. </p>
         <p> img src= "<IMG_20240717_634 class="webp"></IMG_20240717_634></p>
-    <img src="IMG_20240717_162452_634.webp"
+    <img src="marilia-medonca.webp"
     <ul> 
         <h4>ALBUNS DA CANTORA</h4>
         <li>MARÍLIA MENDONÇA AO VIVO - 2015</li>
