--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <h2>O INÍCIO DE TUDO</h2>
     <p>    A cantora iniciou sua carreira aos 12 anos de idade. Começou como compositora, tendo sua primeira canção: ''<strong>Minha Herança</strong>'', gravada pela dupla João Neto & Frederico, no ano de 2012. 
         <p> Além da dupla João Neto & Frederico, Marília teve suas composições gravadas por nomes como Jorge & Mateus, Matheus & Kauan, Maiara & Maraisa, Henrique & Juliano, entre outros grandes nomes da música sertaneja. </p>
-    <img src="marilia-medonca.webp"
+    <img src="marilia-medonca.webp">
     <ul> 
         <h4>ALBUNS DA CANTORA</h4>
         <li>MARÍLIA MENDONÇA AO VIVO - 2015</li>
