--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <ul> 
         <h4>ALBUNS DA CANTORA</h4>
         <li>MARÍLIA MENDONÇA AO VIVO - 2015</li>
+        <p>Primeiro álbum de Marília Mendonça, gravado sem platéia, e produzido pelo renomado produtor muical <strong>EDUARDO PEPATO</strong>. O disco conta com 16 faixa inéditas, que ao todo somam mais de .. visualizações no Youtube.</p>
         <li>DVD REALIDADE - 2017</li>
         <li>AGORA É QUE SÃO ELAS - 2018</li>
         <li>TODOS OS CANTOS - 2019/2020</li>
