--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
     <ul> 
         <h4>ALBUNS DA CANTORA</h4>
         <li>MARÍLIA MENDONÇA AO VIVO - 2015</li>
-        <p>Primeiro álbum de Marília Mendonça, gravado sem platéia, e produzido pelo renomado produtor muical <strong>EDUARDO PEPATO</strong>. O disco conta com 16 faixa inéditas, que ao todo somam mais de .. visualizações no Youtube.</p>
+        <p>Primeiro álbum de Marília Mendonça, gravado sem platéia, e produzido pelo renomado produtor musical <strong>EDUARDO PEPATO</strong>. O disco conta com 16 faixa inéditas, que ao todo somam mais de .. visualizações no Youtube.</p>
         <img src="Marília_Mendonça_-_2016_-_Ao_Vivo.jpg">
         
         <li>DVD REALIDADE - 2017</li>
+        <p>O DVD Realidade foi o segundo projeto da cantora. Depois de tanto sucesso com o primeiro álbum, Marília apostou dessa vez em um projeto ao vivo. Gravado em Manaus AM, com um público de mais de 40 mil pessoas, o DVD Realidade conta com 17 faixas inéditas e a regravação da música <strong>Eu Sei de Cor</strong>, lançada no mesmo ano da gravação do segundo DVD.  
+        </p>
+        <img src=""
         <li>AGORA É QUE SÃO ELAS - 2018</li>
         <li>TODOS OS CANTOS - 2019/2020</li>
         <li>PATROAS - 2020</li>
