--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         </p>
         <img src="download (2).jpeg"
         
-        <li>AGORA É QUE SÃO ELAS - 2018</li>
+        
+        <li>AGORA É QUE SÃO ELAS 2 - 2018</li>
+        <p>O projeto "Agora é que são elas 2", gravado em 2018, foi parceria de Marília Mendonça com a dupla <strong>Maiara & Maraisa</strong>. O projeto conta com 9 faixas inéditas,4 músicas somente da dupla (Saudade do Meu Mô, Maldade, Quase Tudo e Quem Foi Que Soprou), 4 de Marília (Parece Namoro, Coração Mal Assombrado, Estranho e Ausência), e 1 gravada com as três (A Culpa é Dele).  </p>
 
         <li>TODOS OS CANTOS - 2019/2020</li>
         <li>PATROAS - 2020</li>
