--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
         
         <li>PATROAS - 2020</li>
+        <p>O álbum "Patroas" é um projeto que Marília lançou em parceria com a dupla "Maiara & Maraisa" durante a pandemia. O projeto conta com 19 faixas, sendo 2 músicas inéditas, uma versão em português da canção <strong>Listen To Your Heart</strong>, e 16 regravações de cantores como Leandro & Leonardo, Zezé Di Camargo &  Luciano.</p>
         <li>NOSSO AMOR ENVELHECEU - 2021</li>
         <li>PATROAS 35% - 2021</li> 
         <li>DECRETOS REAIS - 2023</li>
