--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 
         
         <li>NOSSO AMOR ENVELHECEU - 2021</li>
+        <p>Álbum de grande sucesso da cantora, o projeto "Nosso Amor Envelheceu" contém 4 faixas inéditas, sendo todas elas composições da cantora. As faixas foram gravadas na live "VEM AÍ" realizada pela cantora durante a pandemia, onde a mesma apresentou ao público canções de muito sucesso de sua autoria gravadas por outros cantores. </p>
+        <img src=""
         <li>PATROAS 35% - 2021</li> 
         <li>DECRETOS REAIS - 2023</li>
         
