--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header> 
+        <a href="https://youtu.be/88_jnJP0OtA?si=ovd6J5NxmED06maV"> Música "<strong>ESTRELINHA</strong>, de Marília e a dupla Di Paullo & Paulino</a>
+    </header>
     <h1>MARÍLIA MENDONÇA</h1>
     <p class="marília">  Marília Mendonça foi uma cantora sertaneja de  <strong>26 anos</strong>, natural da cidade de <strong>Cristianópolis, GO</strong>. Líder do subgênero musical <strong>FEMINEJO</strong> -sertanejo por mulheres-, Marília Mendonça, lidera o topo das paradas musicais com nada mais nada menos que  12,5 milhões de ouvintes mensais na plataforma Spotify, ultrapassando nomes renomados como Anitta, Zé Neto & Cristiano entre outros. </p> 
     <p>    Marília foi vítima de um acidente aéreo fatal em novembro de 2021. A cantora estava a caminho de Minas Gerais, onde realizaria apresentações durante o final de semana. Infelizmente, Marília e todos que estavam à bordo faleceram. Ao todo foram 5 vítimas: o piloto Geraldo Medeiros, o copiloto Tarciso Viana, o produtor Henrique Ribeiro e o tio e assessor da cantora, Abicieli Silveira Dias Filho. </p> 
