--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header> 
-        <a href="UCwfEOn0O1DWcyTgzVVu28ig"> Música "<strong>ESTRELINHA</strong>, de Marília e a dupla Di Paullo & Paulino</a>
+        <a href="UCwfEOn0O1DWcyTgzVVu28ig"> Canal de <strong>MARÍLIA MENDONÇA</strong>.</a>
     </header>
     <h1>MARÍLIA MENDONÇA</h1>
     <p class="marília">  Marília Mendonça foi uma cantora sertaneja de  <strong>26 anos</strong>, natural da cidade de <strong>Cristianópolis, GO</strong>. Líder do subgênero musical <strong>FEMINEJO</strong> -sertanejo por mulheres-, Marília Mendonça, lidera o topo das paradas musicais com nada mais nada menos que  12,5 milhões de ouvintes mensais na plataforma Spotify, ultrapassando nomes renomados como Anitta, Zé Neto & Cristiano entre outros. </p> 
